Bug 14620 - Fix the AIX build
Summary: Fix the AIX build
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-26 14:54 UTC by Ralph Böhme
Modified: 2021-03-01 10:13 UTC (History)
0 users

See Also:


Attachments
backported fix for 4.14 (1.31 KB, patch)
2021-02-25 15:36 UTC, Björn Jacke
bjacke: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2021-01-26 14:54:36 UTC

    
Comment 1 Samba QA Contact 2021-01-29 13:56:02 UTC
This bug was referenced in samba master:

7114150f43751ab869323b91da83705b1e1ab465
Comment 2 Björn Jacke 2021-02-25 15:36:35 UTC
Created attachment 16470 [details]
backported fix for 4.14
Comment 3 Karolin Seeger 2021-02-26 07:56:40 UTC
Pushed to autobuild-v4-14-test.
Comment 4 Samba QA Contact 2021-02-26 10:01:11 UTC
This bug was referenced in samba v4-14-test:

cc3c704a84fcf511debfcbbb1a40794111a836e1
Comment 5 Karolin Seeger 2021-03-01 09:30:50 UTC
Pushed to v4-14-test.
Closing out bug report.

Thanks!
Comment 6 Samba QA Contact 2021-03-01 10:13:44 UTC
This bug was referenced in samba v4-14-stable (Release samba-4.14.0rc4):

cc3c704a84fcf511debfcbbb1a40794111a836e1